# stitcher

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  stitcher.sublime-workspace
.cache/clangd/index/: AlternateSet.hh.A25E228DD49C92E8.idx  AlternateSet.hh.A289D82C1562A3CE.idx  AlternateSubst.hh.5585B6CA25F5544A.idx  AlternateSubst.hh.85322DD5E332B1D2.idx  AlternateSubstFormat1.hh.7ABAF4E57A4DC19B.idx  AlternateSubstFormat1.hh.7BE8BEE008AA5031.idx  Anchor.hh.4DEB2F9237895CF7.idx  Anchor.hh.EA075646BC6710BF.idx  AnchorFormat1.hh.66E85D8DF1F7D355.idx  AnchorFormat1.hh.B5BD19C7A1BDF6C1.idx  AnchorFormat2.hh.803EF1363158F0B1.idx  AnchorFormat2.hh.8790B1DDA9139ECB.idx  AnchorFormat3.hh.09D30A5B4F1114F5.idx  AnchorFormat3.hh.FF9B793BFD20D1B6.idx  AnchorMatrix.hh.93C2C858BE829BDF.idx  AnchorMatrix.hh.E988CD04E2719ED2.idx  BidiChain.c.03031486DDE4B1BB.idx  BidiChain.c.0FFF2B663F2B1840.idx  BidiChain.h.3A83FF50D6BDF919.idx  BidiChain.h.E40618FCB0859711.idx  BidiTypeLookup.c.142566301143DD16.idx  BidiTypeLookup.c.37BE7DD5A8591130.idx  BidiTypeLookup.h.56B9642B5E556BC2.idx  BidiTypeLookup.h.9E2EE90CDC9CF7D8.idx  BracketQueue.c.478A6EB05DF75874.idx  BracketQueue.c.59DAFC7DFFF06B9B.idx  BracketQueue.h.2CCC99267A4B811B.idx  BracketQueue.h.54B1FFBDBD6ECCD3.idx  BracketType.h.A2530FE8F7870B66.idx  BracketType.h.C04D13251361FB39.idx  CBDT.hh.8484568F37F90C1A.idx  CBDT.hh.987671281389AA20.idx  COLR.hh.8539B820657C313C.idx  COLR.hh.AD630E44B9E25BA6.idx  CPAL.hh.81B1A40DDFCDB64B.idx  CPAL.hh.E53E9ACDDDF90D83.idx  ChainContextPos.hh.C1F4F38907041365.idx  ChainContextPos.hh.C2628578B46EFD59.idx  ChainContextSubst.hh.7C563700A0ADF27A.idx  ChainContextSubst.hh.F8DC2C4F7FDA5802.idx  (+3566 more)
CPM_modules/: Findjuce.cmake
Source/: BitCrushProcessor.cpp  BitCrushProcessor.h  ConcatenativeMatcher.cpp  ConcatenativeMatcher.h  CorpusStore.cpp  CorpusStore.h  DSP.h  DelayLine.h  EQProcessor.cpp  EQProcessor.h  FactoryPresets.h  FeatureExtractor.cpp  FeatureExtractor.h  MidiLearn.cpp  MidiLearn.h  Parameters.cpp  Parameters.h  Parameters_bk.cpp  Parameters_bk.h  PitchShiftProcessor.cpp  PitchShiftProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  ReverbProcessor.cpp  ReverbProcessor.h
Source/Assets/Fonts/: LICENSE.txt
Source/Assets/Presets/: Drums_BeatGranule.xml  Drums_DrumCrush.xml  Drums_GlueLayer.xml  Drums_HatScatter.xml  Drums_KickFollower.xml  Drums_PercGhost.xml  Drums_RoomDrums.xml  Drums_SnareSnatcher.xml  FX_ChaosRiser.xml  FX_FreezeSwell.xml  FX_NoiseBloom.xml  FX_ReverseGrain.xml  FX_RiserBuild.xml  Glitch_BitCrumble.xml  Glitch_ChaosEngine.xml  Glitch_DataRot.xml  Glitch_GranularMelt.xml  Glitch_MicroStutter.xml  Glitch_PulseScatter.xml  Glitch_Shatter.xml  Glitch_TimeSplice.xml  LoFi_LoPad.xml  LoFi_Nostalgic.xml  LoFi_OldRadio.xml  LoFi_TapeWarp.xml  LoFi_VinylDust.xml  LoFi_WashedOut.xml  Texture_AetherPad.xml  Texture_CrystalChoir.xml  Texture_DeepSpace.xml  Texture_FrozenAir.xml  Texture_Nebula.xml  Texture_ShimmerHalo.xml  Texture_SilkTexture.xml  Texture_SpectralDrift.xml  Texture_VelvetNoise.xml  Texture_WarmBlanket.xml  Tonal_BassFoundation.xml  Tonal_BrightChord.xml  Tonal_HarmonicCloud.xml  (+11 more)
Source/LookAndFeel/: StitcherLookAndFeel.cpp  StitcherLookAndFeel.h
Source/UI/: FeatureMeter.cpp  FeatureMeter.h  LevelMeter.cpp  LevelMeter.h  MatchVisualizer.cpp  MatchVisualizer.h  MorphPad.cpp  MorphPad.h  PresetBar.cpp  PresetBar.h  SettingsPopover.cpp  SettingsPopover.h
Source/bk/: MyColours.h  ParamIDs.h  Parameters.cpp  Parameters.h
docs/: dsp-review.md
docs/superpowers/plans/: 2026-04-01-dsp-core.md  2026-04-02-grain-crossfade-fix.md  2026-05-22-custom-ui.md  2026-05-22-decouple-gain-from-features.md  2026-05-22-functional-matchlen.md  2026-05-22-grain-only-eq.md  2026-05-22-phase1-visual-identity.md  2026-05-22-phase2-ux-presets.md  2026-05-22-stereo-grain.md  2026-05-23-phase3-preset-bank.md  2026-05-23-phase4-features.md
docs/superpowers/specs/: 2026-04-01-concatenative-synth-design.md
tests/: CMakeLists.txt  ConcatenativeMatcherTest.cpp  CorpusStoreTest.cpp  CrossfadeTest.cpp  EQProcessorTest.cpp  EQTiltTest.cpp  FeatureExtractorTest.cpp  MidiLearnTest.cpp  MorphPadTest.cpp  PresetManagerTest.cpp  ReverbSpaceTest.cpp
